--- a/_config.yml
+++ b/_config.yml
@@ -60,51 +60,58 @@ skills:
 
 
 # Contact Form Setup. Setup an account and copy over the key. When someone fills out the form, it will be received in your email.
-formspree-key:   https://formspree.io/f/{8-digit key}
+formspree-key:   https://formspree.io/f/xeoapdzl
 
 
 
 # Active theme (Updatethis to switch themes). Make sure to keep the indentation the samne.
 colors: # this is the basic theme
+  basic theme:
   text: "#1a1c20"
   border: "#ddd"
   link: "#4a76ee"
   highlight: "#0c0cf2"
   background: "#ffffff"
   light_background: "#f3f5fb"
+  # text: "#1a1c20"
+  # border: "#ddd"
+  # link: "#4a76ee"
+  # highlight: "#0c0cf2"
+  # background: "#ffffff"
+  # light_background: "#f3f5fb"
 
 # A few examples. 
-basic theme:
-  text: "#1a1c20"
-  border: "#ddd"
-  link: "#4a76ee"
-  highlight: "#0c0cf2"
-  background: "#ffffff"
-  light_background: "#f3f5fb"
+# basic theme:
+#   text: "#1a1c20"
+#   border: "#ddd"
+#   link: "#4a76ee"
+#   highlight: "#0c0cf2"
+#   background: "#ffffff"
+#   light_background: "#f3f5fb"
   
-  mint theme:
-  text: "#2c3333"
-  border: "#e0f2ef"
-  link: "#40b3a2"
-  highlight: "#2a9d8f"
-  background: "#f7fbfa"
-  light_background: "#f0f9f7"
+  # mint theme:
+  # text: "#2c3333"
+  # border: "#e0f2ef"
+  # link: "#40b3a2"
+  # highlight: "#2a9d8f"
+  # background: "#f7fbfa"
+  # light_background: "#f0f9f7"
   
-lemon theme:
-  text: "#2d2926"
-  border: "#f7f3e3"
-  link: "#ffc94d"
-  highlight: "#ffb800"
-  background: "#fffdf5"
-  light_background: "#fff9e6"
+# lemon theme:
+#   text: "#2d2926"
+#   border: "#f7f3e3"
+#   link: "#ffc94d"
+#   highlight: "#ffb800"
+#   background: "#fffdf5"
+#   light_background: "#fff9e6"
   
-  pink theme:
-  text: "#2d2d2d"
-  border: "#f8e2e2"
-  link: "#ff8fa3"
-  highlight: "#ff4d6d"
-  background: "#fff8f8"
-  light_background: "#fff5f6"
+#   pink theme:
+#   text: "#2d2d2d"
+#   border: "#f8e2e2"
+#   link: "#ff8fa3"
+#   highlight: "#ff4d6d"
+#   background: "#fff8f8"
+#   light_background: "#fff5f6"
 
 
 
@@ -114,14 +121,14 @@ lemon theme:
 #########################################################################################################
 # Build settings for the site. Editing the below may cause the site to malfunction.
 
-collections:
-  projects:
-    output: true
-    permalink: /projects/:path/
+# collections:
+#   projects:
+#     output: true
+#     permalink: /projects/:path/
 
 
-markdown: kramdown
-highlighter: rouge
+# markdown: kramdown
+# highlighter: rouge
 kramdown:
   syntax_highlighter: rouge
   syntax_highlighter_opts:
